# av

./: .gitignore  CMakeLists.txt  Makefile  README.md  gen_temp.sh  main.cpp  run.sh  shell.nix
examples/: CMakeLists.txt  array_mul.hpp  array_sum.hpp  matrix_mul.hpp  matrix_mul_tests.cpp  mul_tests.cpp  sum_tests.cpp
examples/mul_kernels/: mul_avx.hpp  mul_man.hpp  mul_old.hpp  mul_old_avx.hpp  mul_old_sse.hpp  mul_sse.hpp
examples/sum_kernels/: sum_chunked.hpp  sum_man.hpp  sum_man_avx.hpp  sum_man_sse.hpp  sum_simple.hpp  sum_unroll.hpp
include/: array_mul.hpp  array_sum.hpp  combinations.hpp  common.hpp  complex_sum.hpp  mul_advanced.hpp  mul_avx.hpp  mul_manual.hpp  mul_old_avx.hpp  mul_old_sse.hpp  mul_simple.hpp  mul_sse.hpp  mul_unroll.hpp  progress_bar.hpp  sum_adv_sse.hpp  sum_chunked.hpp  sum_man_avx.hpp  sum_man_sse.hpp  sum_manual.hpp  sum_simple.hpp  sum_unroll.hpp  test_harness.hpp
